--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tech-blog",
   "version": "1.0.0",
-  "description": "A CMS-style blog where developers can publish their blog posts and comment on other developers’ posts.",
+  "description": "A CMS-style blog where developers can publish their blog posts and comment on other developer's posts.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
